Move plugins list CSS to admin default-layout.css. Layout bug corrected with IE.
git-svn-id: http://piwigo.org/svn/trunk@2619 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/admin/template/goto/default-layout.css
+++ b/admin/template/goto/default-layout.css
@@ -39,6 +39,21 @@ TABLE#detailedStats {
   width: 99%;
 }
 
+/* Plugins tables */
+TABLE.table2 TR TD.pluginState {
+  padding-left: 16px;
+}
+
+TABLE.table2 TR TD.active {
+  background: url(icon/plugin_active.gif) no-repeat center left;
+  background-color: inherit; /* IE need it */
+}
+
+TABLE.table2 TR TD.inactive {
+  background: url(icon/plugin_inactive.gif) no-repeat center left;
+  background-color: inherit; /* IE need it */
+}
+
 /* categoryOrdering */
 SELECT.categoryList {
   width: 100%;
